// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button renders accent variant 1`] = `
<View
  accessibilityLabel="Upgrade"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#C23B3B",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#1A1A1A",
            },
          ],
        ]
      }
    >
      Upgrade
    </Text>
  </View>
</View>
`;

exports[`Button renders compact size 1`] = `
<View
  accessibilityLabel="Edit"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4A90A4",
        "borderRadius": 12,
        "height": 40,
        "paddingHorizontal": 16,
      },
      {},
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 13,
              "letterSpacing": 0.3,
              "lineHeight": 18,
            },
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
    >
      Edit
    </Text>
  </View>
</View>
`;

exports[`Button renders danger variant 1`] = `
<View
  accessibilityLabel="Delete"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#C23B3B",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
    >
      Delete
    </Text>
  </View>
</View>
`;

exports[`Button renders disabled state 1`] = `
<View
  accessibilityLabel="Submit"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4A90A4",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      false,
      {
        "opacity": 0.38,
      },
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
    >
      Submit
    </Text>
  </View>
</View>
`;

exports[`Button renders full width 1`] = `
<View
  accessibilityLabel="Continue"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4A90A4",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      {
        "alignSelf": "stretch",
      },
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Button renders ghost variant 1`] = `
<View
  accessibilityLabel="Skip"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "transparent",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#4A90A4",
            },
          ],
        ]
      }
    >
      Skip
    </Text>
  </View>
</View>
`;

exports[`Button renders loading state 1`] = `
<View
  accessibilityLabel="Saving..."
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": true,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4A90A4",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      false,
      {
        "opacity": 0.38,
      },
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FFFFFF"
    size="small"
  />
</View>
`;

exports[`Button renders primary variant by default 1`] = `
<View
  accessibilityLabel="Get Started"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4A90A4",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
    >
      Get Started
    </Text>
  </View>
</View>
`;

exports[`Button renders prominent size 1`] = `
<View
  accessibilityLabel="Find My Resort"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4A90A4",
        "borderRadius": 12,
        "height": 56,
        "paddingHorizontal": 32,
      },
      {},
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
    >
      Find My Resort
    </Text>
  </View>
</View>
`;

exports[`Button renders secondary variant 1`] = `
<View
  accessibilityLabel="Cancel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {
        "borderColor": "#D1D5DB",
        "borderWidth": 1.5,
      },
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#1A1A1A",
            },
          ],
        ]
      }
    >
      Cancel
    </Text>
  </View>
</View>
`;

exports[`Button renders with left icon 1`] = `
<View
  accessibilityLabel="Save"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4A90A4",
        "borderRadius": 12,
        "height": 48,
        "paddingHorizontal": 24,
      },
      {},
      false,
      false,
      false,
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "lineHeight": 20,
            },
            {
              "fontSize": 16,
            },
          ],
        ]
      }
    >
      ❤️
    </Text>
    <Text
      maxFontSizeMultiplier={1.4}
      style={
        [
          {
            "fontFamily": "Montserrat-Regular",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
          },
          {
            "color": "#1A1A1A",
          },
          undefined,
          [
            {
              "fontFamily": "Montserrat-Medium",
              "fontSize": 15,
              "letterSpacing": 0.3,
              "lineHeight": 22,
            },
            {
              "color": "#FFFFFF",
            },
          ],
        ]
      }
    >
      Save
    </Text>
  </View>
</View>
`;
